feat: add analitics
