# gen/models/analytics.go
@@ -1,0 +1,52 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Analytics OK response with count
+//
+// # OK response with count
+//
+// swagger:model analytics
+type Analytics struct {
+
+	// redirects
+	Redirects int64 `json:"redirects,omitempty"`
+}
+
+// Validate validates this analytics
+func (m *Analytics) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this analytics based on context it is used
+func (m *Analytics) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Analytics) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Analytics) UnmarshalBinary(b []byte) error {
+	var res Analytics
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
