# swagger.yaml
@@ -55,14 +55,13 @@ paths:
         200:
           description: OK
           schema:
-            type: object
-            properties:
-              redirects:
-                type: number
-        401:
-          $ref: "#/responses/unauthorized"
+            $ref: "swagger/responses/analytics.yml"
+        400:
+          $ref: "#/responses/invalid-request"
         404:
           $ref: "#/responses/not-found"
+        401:
+          $ref: "#/responses/unauthorized"
         500:
           $ref: "#/responses/server-error"
   /url:
